* Changed netCDF-3/HDF4/HDF5 backends to be more explicit about implicitly
  created dimensions (which are used to store scalars and strings for formats
  that do not support this natively).

* Added ingestion module for ozone CCI L3 total column products.

* Fixed handling of scalars and empty strings in netCDF-3/HDF4/HDF5 backends.
 
* Fixed unit attribute name in HARP products ('unit' -> 'units').

0.1 2015-11-09
~~~~~~~~~~~~~~

* First beta release (using CODA 2.15).
